--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,13 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #ebe3d4;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ebe3d4;
+    --foreground: #000000;
   }
 }
 
